--- a/algamoney-api/pom.xml
+++ b/algamoney-api/pom.xml
@@ -77,8 +77,9 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+			<version>2.3.5.RELEASE</version>
 		</dependency>
 		
 		
